@startuml view_vehicle_detail_usecase

title Class Diagram - View Vehicle Detail Use Case (Rentzy)

class VehicleRoute {
  + GET /api/renter/vehicles/:vehicle_id
  + getVehicleById()
}

class verifyJWTToken {
  + verify(request, response, next)
}

class VehicleController {
  + getVehicleById(request, response)
}

class Vehicle {
  + vehicle_id: BIGINT <<PK>>
  + owner_id: BIGINT <<FK>>
  + model: STRING
  + price_per_day: DECIMAL
  + main_image_url: STRING
  + extra_images: JSON
  + features: JSON
  + location: STRING
  + status: ENUM
  + findByPk(vehicleId: BIGINT): Vehicle
}

class User {
  + user_id: BIGINT <<PK>>
  + full_name: STRING
  + avatar_url: STRING
  + findByPk(userId: BIGINT): User
}

class Booking {
  + booking_id: BIGINT <<PK>>
  + vehicle_id: BIGINT <<FK>>
  + renter_id: BIGINT <<FK>>
  + findAll(options): Array<Booking>
}

class BookingReview {
  + review_id: BIGINT <<PK>>
  + booking_id: BIGINT <<FK>>
  + rating: TINYINT
  + review_content: TEXT
  + findAll(options): Array<BookingReview>
}

VehicleRoute --> verifyJWTToken : uses
VehicleRoute --> VehicleController : calls
VehicleController --> Vehicle : queries
VehicleController --> User : queries
VehicleController --> Booking : queries
VehicleController --> BookingReview : queries

Vehicle ||--o{ Booking : "has many"
User ||--o{ Booking : "renter has many"
User ||--o{ Vehicle : "owner has many"
Booking ||--o{ BookingReview : "has many"

@enduml